Favicon, page titles, some metadata and minor changes

--- a/pages/blog/create-blog-nextjs-tailwind.mdx
+++ b/pages/blog/create-blog-nextjs-tailwind.mdx
@@ -5,6 +5,4 @@ date: '2020-10-26'
 summary: 'Next.js is a powerful tool that, combined with an immediate CSS framework such as Tailwind, gives the developer few things to think about and start creating amazing websites right out of the box.'
 ---
 
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. In sed venenatis massa. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Maecenas tincidunt ut risus at consequat. Pellentesque non diam condimentum, malesuada purus nec, pretium orci. Suspendisse potenti. Ut auctor nisl a blandit porttitor.
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. In sed venenatis massa. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Maecenas tincidunt ut risus at consequat. Pellentesque non diam condimentum, malesuada purus nec, pretium orci. Suspendisse potenti. Ut auctor nisl a blandit porttitor.
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. In sed venenatis massa. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Maecenas tincidunt ut risus at consequat. Pellentesque non diam condimentum, malesuada purus nec, pretium orci. Suspendisse potenti. Ut auctor nisl a blandit porttitor.
+I am working on it...
